  to help with identifying the necessary changes (thanks to Jay Hesselberth)
* segway: new escaping method from Genomedata tracknames to GMTK
  tracknames allows any arbitrary Genomedata trackname, but this means
  that previous files will be incompatible, since "_" is now replaced
  by "_5f" and "." by "_2e" (formerly both of these were "_", which
  was ambiguous)
* segway: allow tying of tracks with --trackname track1,track2, which
  gives you only one set of parameters. you may need to adjust
  existing train.tab files to use track_specs instead of
  include_tracknames because of other necessary changes
* segway: LSF: fix bug where wrapper script sometimes did not delete
  temporary observation files after a crash
* segway: more informative error message when supervision labels overlap each other
* segway: segway.sh has cd command in addition to segway command
* segway: MC/MX/REAL_MAT direct parameters are no longer trained (MEAN/COVAR/DENSECPT parameters are)
* segway-layer: add --bigBed option, which works if you have
  bedToBigBed in your path
* segway: add --bigBed option which calls segway-layer --bigBed
* segway-layer: fix issue #19. Now doesn't override previous colors
  when mnemonics aren't supplied (thanks to Jay Hesselberth)
* segway-winner: fix issue #21. Now works on Python 2.5.1
* installation: always require drmaa. setuptools extras_require wasn't that useful in practice
* test: use fixed random seed to generate input.master every time
* test: when files differ, output is in a form that makes it easier to diff
* test: update for new GMTK

1.1.0:

* segway: now again includes posterior output in bedGraph format
  (thanks to Avinash Sahu)
* segway: --old-directory renamed to --recover
* segway: --recover now supports identify as well as train. less
  clunky and more consistent than the old recipe for training recovery
  included in the docs (posterior still not supported)
* segway: train.tab is now optional, so you should be able to run